--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -3,22 +3,22 @@
 		}
 h1 {
   color: white;
-	 font-family: courier;
+	 font-family: arial;
   font-size: 360%;
 }
 h2 {
   color: white;
-	 font-family: courier;
+	 font-family: arial;
   font-size: 250%;
 }
 h3 {
   color: white;
-	 font-family: courier;
+	 font-family: arial;
   font-size: 200%;
 }
 p {
   color: white;
-  font-family: courier;
+  font-family: arial;
   font-size: 160%;
 }
 		footer{
