--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -21,6 +21,9 @@ p {
   font-family: arial;
   font-size: 160%;
 }
+table, th, td {
+  border: 3px solid white;
+}
 		footer{
 			position: absolute;
 			margin-top: 300px;
