--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -1,8 +1,8 @@
 		body{
-			background-color: #1E0731;
+			background-color: #2a8da1;
 		}
 h1 {
-  color: #2a8da1;
+  color: #99eeff;
 	 font-family: arial;
   font-size: 360%;
 }
