--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -38,6 +38,9 @@ table, th, td {
 		}
 
 		.wrapper{
+			color: #99eeff;
+	 		font-family: arial;
+  			font-size: 360%;
 			position: absolute;
 			float: left;
 			margin: 140px 100px;
