--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -46,8 +46,8 @@ table {
     border-collapse: collapse;
     border: 2px solid rgb(200, 200, 200);
     letter-spacing: 1px;
-    font-family: sans-serif;
-    font-size: .8rem;
+    font-family: arial;
+    
 }
 
 td,
