--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -73,7 +73,7 @@ td {
 
 		.wrapper{
 			color: #99eeff;
-	 		font-family: arial;
+	 		font-family: sherif;
   			font-size: 360%;
 			position: absolute;
 			float: left;
