--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -24,13 +24,17 @@ p {
 
 ol {
 	color: white;
-  list-style: none; /* Remove list bullets */
-  padding: 0;
+  font-family: arial;
+  font-size: 160%;
+	list-style-type: circle;
+   padding: 0;
   margin: 0;
 }
 
 li {
 	color: white;
+  font-family: arial;
+  font-size: 160%;
   padding-left: 16px;
 }
 
