--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -1,6 +1,17 @@
 		body{
-			background-color: #1b3757;
+			// background-color: #1b3757;
+			background-color: #000;
+	background-image: // skeuomorphism anyone?
+		radial-gradient(rgba(#fff, 0.125), rgba(#fff, 0)),
+		linear-gradient(to bottom, #000, #000 2px, #111 3px);
+	background-repeat: repeat-y;
+	background-position: center center;
+	background-size: cover, 100% 3px;
 		}
+
+
+
+
 h1 {
   color: #99eeff;
 	 font-family: arial;
