--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -1,13 +1,20 @@
 		body{
 			// background-color: #1b3757;
-			background-color: #000;
+			display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #000;
 	background-image: // skeuomorphism anyone?
 		radial-gradient(rgba(#fff, 0.125), rgba(#fff, 0)),
 		linear-gradient(to bottom, #000, #000 2px, #111 3px);
 	background-repeat: repeat-y;
 	background-position: center center;
 	background-size: cover, 100% 3px;
-		}
+	font-size: calc(10px + 2vw);
+	font-family: 'VT323', monospace, sans-serif;
+	color: #3f3; // hacker green
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 
 
 
