--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -1,5 +1,17 @@
 body{
-	background-color: #1b3757;					
+	// vbackground-color: #1b3757;
+	
+	background: linear-gradient(132deg, #FC415A, #591BC5, #212335);
+  background-size: 400% 400%;
+  animation: Gradient 15s ease infinite;
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  padding:0;
+  margin:0px;
+	
+	
 }
 					
 h1 {
