--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -1,7 +1,7 @@
 body{
 	// vbackground-color: #1b3757;
 	
-	background: linear-gradient(132deg, #FC415A, #591BC5, #212335);
+	background: linear-gradient(132deg, #1b3757, #096a79, #00d4ff);
   background-size: 400% 400%;
   animation: Gradient 3s ease infinite;
   position: relative;
