--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -2,8 +2,13 @@ body{
 	// background-color: #1b3757;
 	
 	background: linear-gradient(132deg, #1b3757, #096a79, #00d4ff);
+    	animation: Gradient 3s ease infinite;
+	position: relative;
+  	height: 100vh;
+  	width: 100%;
   
-  animation: Gradient 3s ease infinite;
+  	padding:0;
+  	margin:0px;
 	
 }
 					
