--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -2,15 +2,18 @@ body{
 	// background-color: #1b3757;
 	
 	//background: linear-gradient(132deg, #1b3757, #096a79, #00d4ff);
-    	background: linear-gradient(132deg, #FC415A, #591BC5, green);
+    	
+}
+.background {
+  background: linear-gradient(132deg, #FC415A, #591BC5, green);
   background-size: 400% 400%;
   animation: Gradient 6s ease infinite;
   position: relative;
   height: 100vh;
   width: 100%;
+  
   padding:0;
   margin:0px;
-	
 }
 					
 h1 {
