--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -1,9 +1,32 @@
 body{
-	// background-color: #1b3757;
-	
-	background: linear-gradient(132deg, #1b3757, #096a79, #00d4ff);
-    	
+	    	
 }
+
+.background {
+  background: linear-gradient(132deg, #FC415A, #591BC5, #212335);
+  background-size: 400% 400%;
+  animation: Gradient 3s ease infinite;
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  //overflow: hidden;
+  padding:0;
+  margin:0px;
+}
+
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+
 			
 h1 {
   color: #99eeff;
@@ -29,7 +52,7 @@ p {
 ol {
 	 color: white;
   font-family: arial;
-  font-size: 120%;
+  font-size: 100%;
 	list-style-type: circle;
    padding: 0;
   margin: 0;
@@ -38,7 +61,7 @@ ol {
 li {
 	 color: white;
   font-family: arial;
-  font-size: 120%;
+  font-size: 100%;
   padding-left: 16px;
 }
 
