--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -7,7 +7,7 @@ body{
   background-size: 400% 400%;
   animation: Gradient 3s ease infinite;
   position: relative;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   //overflow: hidden;
   padding:0;
