--- a/markdown-to-html/style.css
+++ b/markdown-to-html/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 .background {
-  background: linear-gradient(132deg, #1b3757, #096a79, #00d4ff);
+  background: linear-gradient(132deg, #1b3757, #096a79, #00ff77);
   background-size: 400% 400%;
   animation: Gradient 15s ease infinite;
   position: relative;
